--- a/assets/css/doyel-style.css
+++ b/assets/css/doyel-style.css
@@ -98,63 +98,64 @@
   max-width: 100%;
 }
 .widget {
-    margin-bottom: 30px;
-    padding: 30px;
-    text-align: center;
-    background-color: #fff;
-    border-radius: 5px;
+  margin-bottom: 30px;
+  padding: 30px;
+  text-align: center;
+  background-color: #fff;
+  border-radius: 5px;
 }
 .widget:last-child{
-    margin-bottom: 0px;
+  margin-bottom: 0px;
 }
 .widget a:hover {
-    color: #252525;
+  color: #252525;
 }
 .widget h2 {
-    font-size: 20px;
-    text-transform: uppercase;
-    color: #424242;
+  font-size: 20px;
+  text-transform: uppercase;
+  color: #424242;
 }
 .widget ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    line-height: 2;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  line-height: 2;
 }
 .widget ul ul {
-    padding-left: 15px;
+  padding-left: 15px;
 }
 .widget ul ul ul {
-    padding-left: 5px;
+  padding-left: 5px;
 }
 .widget a {
-    color: #555;
+  color: #555;
+  text-decoration: none;
 }
 .widget table {
-    width: 100%;
-    border-top: 1px solid #ddd;
-    border-right: 1px solid #ddd;
+  width: 100%;
+  border-top: 1px solid #ddd;
+  border-right: 1px solid #ddd;
 }
 .widget table th {
-    background-color: #ddd;
+  background-color: #ddd;
 }
 .widget table th,
 .widget table td {
-    padding: 5px;
-    border-left: 1px solid #ddd;
-    border-bottom: 1px solid #ddd;
+  padding: 5px;
+  border-left: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
 }
 .widget.widget_rss li {
-    margin-bottom: 30px;
+  margin-bottom: 30px;
 }
 .widget.widget_rss .rssSummary {
-    font-size: 95%;
-    padding-top: 10px;
+  font-size: 95%;
+  padding-top: 10px;
 }
 .widget.widget_rss cite {
-    padding-top: 10px;
-    display: inline-block;
-    font-weight: 700;
+  padding-top: 10px;
+  display: inline-block;
+  font-weight: 700;
 }
 .widget.widget_rss a.rsswidget {
     font-size: 110%;
@@ -292,19 +293,22 @@ img{
   height: auto;
 }
 a {
-  text-decoration: none;
+  text-decoration: underline;
   transition: all 0.5s ease;
   color: #999999;
 }
 a:hover {
   color: #252525;
-  outline: none;
   text-decoration: underline;
+  outline: none;
   background:none;
   transition: all 0.5s ease;
 }
 a:focus {
   color: #0073AA ;
+}
+a:not([href]) {
+	color: #fff;
 }
 ul,
 ul li {
@@ -355,6 +359,7 @@ header.doyel-header-img .container {
 .mainmenu li a {
   color: #252525;
   text-transform: uppercase;
+  text-decoration: none;
   font-size: 14px;
   font-weight: 500;
   padding-top: 18px;
@@ -628,11 +633,13 @@ article.post img {
 .entry-footer span a,
 .entry-meta a{
   color: #999999;
+  text-decoration: none;
 }
 .entry-title a:hover ,
 .entry-footer span a:hover,
 .entry-meta a:hover{
   color: #000000;
+  text-decoration: underline;
 }
 .entry-footer{
   margin-top: 10px;
